# py-pyside6-ml-pt-rnn-imdb

./: CHANGELOG.md  README.md  README.zh-CN.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
data/: dictionary.json
utils/: .gitignore  JB.py  OUT.py  PT.py  SPA.py  THU.py  __init__.py  config.py  criterion.py  decorator.py  helper.py  highlighter.py  models.py  nlp.py  predictor.py  stats.py  trainer.py
