[project]
name = "py-pyside6-ml-rnn-boston"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jieba>=0.42.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pyside6>=6.10.0",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "spacy-pkuseg>=1.0.1",
    "stanza>=1.11.0",
    "thulac>=0.2.2",
    "torch>=2.9.0",
    "torchsummary>=1.5.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "git-changelog>=2.6.3",
    "ruff>=0.14.2",
]

[tool.git-changelog]
bump = "auto"
convention = "conventional"
in-place = false
filter-commits = ""
marker-line = "<!-- insertion marker for GitHub -->"
output = "CHANGELOG.md"
parse-refs = true
parse-trailers = true
provider = "github"
repository = "."
sections = ["feat", "fix", "chore", "docs", "perf", "build", "refactor", "test", "deps"]
template = "angular"
version-regex = "^## \\[(?P<version>v?[^\\]]+)"
versioning = "semver"
zerover = false
